--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <center>
         <header class="photos_title">
-            Photos Library
+            Photos Library 2
         </header>
     </center>
     <body>
